--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
   </head>
   <body>
     <!-- Header -->
-    <header class="header">
+    <!-- <header class="header">
       <div class="container page-header">
         <nav class="main-nav">
           <a class="link logo header-logo" href="./index.html"
@@ -57,19 +57,19 @@
           </ul>
         </address>
       </div>
-    </header>
+    </header> -->
     <main>
       <!-- Hero Section -->
-      <section class="hero">
+      <!-- <section class="hero">
         <div class="container">
           <h1 class="page-title">Effective Solutions for Your Business</h1>
           <button type="button" class="button button-main" data-modal-open>
             Order Service
           </button>
         </div>
-      </section>
+      </section> -->
       <!-- About us Section -->
-      <section class="about">
+      <!-- <section class="about">
         <div class="container">
           <h2 class="visually-hidden section-title">About us</h2>
           <ul class="about-list card-set list">
@@ -123,9 +123,9 @@
             </li>
           </ul>
         </div>
-      </section>
+      </section> -->
       <!-- What are we doing (Activity) Section -->
-      <section class="activity">
+      <!-- <section class="activity">
         <div class="container">
           <h2 class="section-title">What are we doing</h2>
           <ul class="list activity-list card-set">
@@ -155,10 +155,10 @@
             </li>
           </ul>
         </div>
-      </section>
+      </section> -->
       <!-- Our Team Section -->
       <section class="team">
-        <div class="container">
+        <div class="container team-container">
           <h2 class="section-title">Our Team</h2>
           <ul class="list team-list card-set">
             <li class="team-card card-set-item">
@@ -344,7 +344,7 @@
         </div>
       </section>
       <!-- Customers Section -->
-      <section class="customers">
+      <!-- <section class="customers">
         <div class="container">
           <h2 class="section-title">Customers</h2>
 
@@ -393,10 +393,10 @@
             </li>
           </ul>
         </div>
-      </section>
+      </section> -->
     </main>
     <!---------------- Footer --------------->
-    <footer class="footer">
+    <!-- <footer class="footer">
       <div class="container footer-container">
         <div class="footer-left-side">
           <a class="link logo footer-logo" href="./index.html"
@@ -460,9 +460,9 @@
           </form>
         </div>
       </div>
-    </footer>
+    </footer> -->
     <!-- Backdrop & Modal window -->
-    <div class="backdrop is-hidden" data-modal>
+    <!-- <div class="backdrop is-hidden" data-modal>
       <div class="modal">
         <button type="button" class="modal-close-btn" data-modal-close>
           <svg class="modal-close-icon" width="8" height="8">
@@ -560,10 +560,10 @@
           </button>
         </form>
       </div>
-    </div>
-    <script src="./js/modal.js"></script>
+    </div> -->
+    <!-- <script src="./js/modal.js"></script> -->
     <!-- Mask for input -->
-    <script src="./js/inputmask.min.js"></script>
-    <script src="./js/form.js"></script>
+    <!-- <script src="./js/inputmask.min.js"></script>
+    <script src="./js/form.js"></script> -->
   </body>
 </html>
