all sections but header

--- a/index.html
+++ b/index.html
@@ -60,16 +60,16 @@
     </header> -->
     <main>
       <!-- Hero Section -->
-      <!-- <section class="hero">
+      <section class="hero">
         <div class="container">
           <h1 class="page-title">Effective Solutions for Your Business</h1>
           <button type="button" class="button button-main" data-modal-open>
             Order Service
           </button>
         </div>
-      </section> -->
+      </section>
       <!-- About us Section -->
-      <!-- <section class="about">
+      <section class="about section">
         <div class="container">
           <h2 class="visually-hidden section-title">About us</h2>
           <ul class="about-list card-set list">
@@ -79,8 +79,8 @@
                   <use href="./images/icons.svg#antenna"></use>
                 </svg>
               </div>
-              <h3 class="section-subtitle">Strategy</h3>
-              <p class="text text-light-theme">
+              <h3 class="about-subtitle">Strategy</h3>
+              <p class="text text-light-theme about-text">
                 Our goal is to identify the business problem to walk away with
                 the perfect and creative solution.
               </p>
@@ -91,8 +91,8 @@
                   <use href="./images/icons.svg#clock"></use>
                 </svg>
               </div>
-              <h3 class="section-subtitle">Punctuality</h3>
-              <p class="text text-light-theme">
+              <h3 class="about-subtitle">Punctuality</h3>
+              <p class="text text-light-theme about-text">
                 Bring the key message to the brand's audience for the best price
                 within the shortest possible time.
               </p>
@@ -103,8 +103,8 @@
                   <use href="./images/icons.svg#diagram"></use>
                 </svg>
               </div>
-              <h3 class="section-subtitle">Diligence</h3>
-              <p class="text text-light-theme">
+              <h3 class="about-subtitle">Diligence</h3>
+              <p class="text text-light-theme about-text">
                 Research and confirm brands that present the strongest digital
                 growth opportunities and minimize risk.
               </p>
@@ -115,17 +115,17 @@
                   <use href="./images/icons.svg#astronaut"></use>
                 </svg>
               </div>
-              <h3 class="section-subtitle">Technologies</h3>
-              <p class="text text-light-theme">
+              <h3 class="about-subtitle">Technologies</h3>
+              <p class="text text-light-theme about-text">
                 Design practice focused on digital experiences. We bring forth a
                 deep passion for problem-solving.
               </p>
             </li>
           </ul>
         </div>
-      </section> -->
+      </section>
       <!-- What are we doing (Activity) Section -->
-      <!-- <section class="activity">
+      <section class="activity section">
         <div class="container">
           <h2 class="section-title">What are we doing</h2>
           <ul class="list activity-list card-set">
@@ -155,9 +155,9 @@
             </li>
           </ul>
         </div>
-      </section> -->
+      </section>
       <!-- Our Team Section -->
-      <section class="team">
+      <section class="team section">
         <div class="container team-container">
           <h2 class="section-title">Our Team</h2>
           <ul class="list team-list card-set">
@@ -344,8 +344,8 @@
         </div>
       </section>
       <!-- Customers Section -->
-      <!-- <section class="customers">
-        <div class="container">
+      <section class="customers section">
+        <div class="customers-container container">
           <h2 class="section-title">Customers</h2>
 
           <ul class="customers-list list card-set">
@@ -393,12 +393,12 @@
             </li>
           </ul>
         </div>
-      </section> -->
+      </section>
     </main>
     <!---------------- Footer --------------->
-    <!-- <footer class="footer">
+    <footer class="footer">
       <div class="container footer-container">
-        <div class="footer-left-side">
+        <div class="footer-business-slogan">
           <a class="link logo footer-logo" href="./index.html"
             >Web<span class="logo-studio-dark-theme">Studio</span></a
           >
@@ -460,9 +460,9 @@
           </form>
         </div>
       </div>
-    </footer> -->
+    </footer>
     <!-- Backdrop & Modal window -->
-    <!-- <div class="backdrop is-hidden" data-modal>
+    <div class="backdrop is-hidden" data-modal>
       <div class="modal">
         <button type="button" class="modal-close-btn" data-modal-close>
           <svg class="modal-close-icon" width="8" height="8">
@@ -560,10 +560,10 @@
           </button>
         </form>
       </div>
-    </div> -->
-    <!-- <script src="./js/modal.js"></script> -->
+    </div>
+    <script src="./js/modal.js"></script>
     <!-- Mask for input -->
-    <!-- <script src="./js/inputmask.min.js"></script>
-    <script src="./js/form.js"></script> -->
+    <script src="./js/inputmask.min.js"></script>
+    <script src="./js/form.js"></script>
   </body>
 </html>
