--- a/index.html
+++ b/index.html
@@ -141,45 +141,109 @@
           <h2 class="section-title">What are we doing</h2>
           <ul class="list activity-list card-set">
             <li class="activity-item card-set-item">
-              <img
-                src="./images/activity/img1.jpg"
-                alt="iMac on white bakground"
-                width="360"
-                height="300"
-              />
+              <picture>
+                <source
+                  srcset="
+                    ./images/activity/img-1@1x.webp 1x,
+                    ./images/activity/img-1@2x.webp 2x
+                  "
+                  type="image/webp"
+                />
+                <source
+                  srcset="
+                    ./images/activity/img-1@1x.jpg 1x,
+                    ./images/activity/img-1@2x.jpg 2x
+                  "
+                  type="image/jpg"
+                />
+                <img
+                  src="./images/activity/img-1@1x.jpg"
+                  alt="iMac on white bakground"
+                  width="360"
+                  height="300"
+                />
+              </picture>
             </li>
             <li class="activity-item card-set-item">
-              <img
-                src="./images/activity/img2.jpg"
-                alt="iPhone with open messanger"
-                width="360"
-                height="300"
-              />
+              <picture>
+                <source
+                  srcset="
+                    ./images/activity/img-2@1x.webp 1x,
+                    ./images/activity/img-2@2x.webp 2x
+                  "
+                  type="image/webp"
+                />
+                <source
+                  srcset="
+                    ./images/activity/img-2@1x.jpg 1x,
+                    ./images/activity/img-2@2x.jpg 2x
+                  "
+                  type="image/jpg"
+                />
+                <img
+                  src="./images/activity/img-2@1x.jpg"
+                  alt="iPhone with open messanger"
+                  width="360"
+                  height="300"
+                />
+              </picture>
             </li>
             <li class="activity-item card-set-item">
-              <img
-                src="./images/activity/img3.jpg"
-                alt="Hand holding the phone in the foreground. Laptop on background"
-                width="360"
-                height="300"
-              />
+              <picture>
+                <source
+                  srcset="
+                    ./images/activity/img-3@1x.webp 1x,
+                    ./images/activity/img-3@2x.webp 2x
+                  "
+                  type="image/webp"
+                />
+                <source
+                  srcset="
+                    ./images/activity/img-3@1x.jpg 1x,
+                    ./images/activity/img-3@2x.jpg 2x
+                  "
+                  type="image/jpg"
+                />
+                <img
+                  src="./images/activity/img-3@1x.jpg"
+                  alt="Hand holding the phone in the foreground. Laptop on background"
+                  width="360"
+                  height="300"
+                />
+              </picture>
             </li>
           </ul>
         </div>
       </section>
       <!-- Our Team Section -->
       <section class="team section">
-        <div class="container team-container">
+        <div class="team-container">
           <h2 class="section-title">Our Team</h2>
           <ul class="list team-list card-set">
             <li class="team-card card-set-item">
-              <img
-                class="employee-photo"
-                src="./images/team/photo1.jpg"
-                alt="A bearded young man in a white shirt"
-                width="264"
-                height="260"
-              />
+              <picture>
+                <source
+                  srcset="
+                    ./images/team/employee1.webp    1x,
+                    ./images/team/employee1@2x.webp 2x
+                  "
+                  type="image/webp"
+                />
+                <source
+                  srcset="
+                    ./images/team/employee1.jpg    1x,
+                    ./images/team/employee1@2x.jpg 2x
+                  "
+                  type="image/jpg"
+                />
+                <img
+                  class="employee-photo"
+                  src="./images/team/employee1.jpg"
+                  alt="A bearded young man in a white shirt"
+                  width="264"
+                  height="260"
+                />
+              </picture>
               <div class="card-content">
                 <h3 class="section-subtitle employee-name">Mark Guerrero</h3>
                 <p class="text text-light-theme employee-position">
@@ -219,13 +283,29 @@
               </div>
             </li>
             <li class="team-card card-set-item">
-              <img
-                class="employee-photo"
-                src="./images/team/photo2.jpg"
-                alt="A young man with a wide smile looking towards"
-                width="264"
-                height="260"
-              />
+              <picture>
+                <source
+                  srcset="
+                    ./images/team/employee2.webp    1x,
+                    ./images/team/employee2@2x.webp 2x
+                  "
+                  type="image/webp"
+                />
+                <source
+                  srcset="
+                    ./images/team/employee2.jpg    1x,
+                    ./images/team/employee2@2x.jpg 2x
+                  "
+                  type="image/jpg"
+                />
+                <img
+                  class="employee-photo"
+                  src="./images/team/employee2.jpg"
+                  alt="A young man with a wide smile looking towards"
+                  width="264"
+                  height="260"
+                />
+              </picture>
               <div class="card-content">
                 <h3 class="section-subtitle employee-name">Tom Ford</h3>
                 <p class="text text-light-theme employee-position">
@@ -264,13 +344,29 @@
               </div>
             </li>
             <li class="team-card card-set-item">
-              <img
-                class="employee-photo"
-                src="./images/team/photo3.jpg"
-                alt="A brunette in a pink sweater, looking straight ahead and smiling"
-                width="264"
-                height="260"
-              />
+              <picture>
+                <source
+                  srcset="
+                    ./images/team/employee3.webp    1x,
+                    ./images/team/employee3@2x.webp 2x
+                  "
+                  type="image/webp"
+                />
+                <source
+                  srcset="
+                    ./images/team/employee3.jpg    1x,
+                    ./images/team/employee3@2x.jpg 2x
+                  "
+                  type="image/jpg"
+                />
+                <img
+                  class="employee-photo"
+                  src="./images/team/employee3.jpg"
+                  alt="A brunette in a pink sweater, looking straight ahead and smiling"
+                  width="264"
+                  height="260"
+                />
+              </picture>
               <div class="card-content">
                 <h3 class="section-subtitle employee-name">Camila Garcia</h3>
                 <p class="text text-light-theme employee-position">Marketing</p>
@@ -307,13 +403,29 @@
               </div>
             </li>
             <li class="team-card card-set-item">
-              <img
-                class="employee-photo"
-                src="./images/team/photo4.jpg"
-                alt="A brunette in a light T-shirt, looking straight ahead and smiling"
-                width="264"
-                height="260"
-              />
+              <picture>
+                <source
+                  srcset="
+                    ./images/team/employee4.webp    1x,
+                    ./images/team/employee4@2x.webp 2x
+                  "
+                  type="image/webp"
+                />
+                <source
+                  srcset="
+                    ./images/team/employee4.jpg    1x,
+                    ./images/team/employee4@2x.jpg 2x
+                  "
+                  type="image/jpg"
+                />
+                <img
+                  class="employee-photo"
+                  src="./images/team/employee4.jpg"
+                  alt="A brunette in a light T-shirt, looking straight ahead and smiling"
+                  width="264"
+                  height="260"
+                />
+              </picture>
               <div class="card-content">
                 <h3 class="section-subtitle employee-name">Daniel Wilson</h3>
                 <p class="text text-light-theme employee-position">
@@ -574,21 +686,17 @@
     </div>
     <!-- Mobile menu -->
     <div class="menu-container js-menu-container" id="mobile-menu">
-      <button class="menu-toggle js-close-menu">
-        <svg
-          fill="currentColor"
-          viewBox="0 0 20 20"
-          xmlns="http://www.w3.org/2000/svg"
-          width="24"
-          height="24"
-        >
-          <path
-            fill-rule="evenodd"
-            d="M4.293 4.293a1 1 0 011.414 0L10 8.586l4.293-4.293a1 1 0 111.414 1.414L11.414 10l4.293 4.293a1 1 0 01-1.414 1.414L10 11.414l-4.293 4.293a1 1 0 01-1.414-1.414L8.586 10 4.293 5.707a1 1 0 010-1.414z"
-            clip-rule="evenodd"
-          ></path>
+      <button class="modal-close-btn menu-toggle-close js-close-menu">
+        <svg class="modal-close-icon" width="8" height="8">
+          <use href="./images/icons.svg#close-modal"></use>
         </svg>
       </button>
+
+      <!-- <button type="button" class="modal-close-btn menu-toggle js-close-menu">
+        <svg class="modal-close-icon" width="8" height="8">
+          <use href="./images/icons.svg#close-modal"></use>
+        </svg>
+      </button> -->
 
       <ul class="mobile-menu list">
         <li classs="mobile-menu-item">
@@ -621,7 +729,7 @@
         </li>
       </ul>
 
-      <ul class="social-list footer-social-list list">
+      <ul class="social-list footer-social-list mob-menu-social-list list">
         <li class="social-list-item">
           <a href="" class="social-list-link footer-social-link">
             <svg class="social-list-icon" width="24" height="24">
