--- a/index.html
+++ b/index.html
@@ -537,7 +537,7 @@
             digital marketing & growth solutions.
           </p>
         </div>
-        <div class="footer-sosial-media">
+        <div class="footer-soсial-media">
           <p class="footer-media-title">Social media</p>
           <ul class="social-list footer-social-list list">
             <li class="social-list-item">
