--- a/index.html
+++ b/index.html
@@ -707,7 +707,11 @@
 
       <ul class="mobile-menu list">
         <li classs="mobile-menu-item">
-          <a href="./index.html" class="mobile-menu-link link">Studio</a>
+          <a
+            href="./index.html"
+            class="current-page-mobile mobile-menu-link link"
+            >Studio</a
+          >
         </li>
         <li classs="mobile-menu-item">
           <a href="./portfolio.html" class="mobile-menu-link link">Portfolio</a>
