--- a/portfolio.html
+++ b/portfolio.html
@@ -866,7 +866,11 @@
           <a href="./index.html" class="mobile-menu-link link">Studio</a>
         </li>
         <li classs="mobile-menu-item">
-          <a href="./portfolio.html" class="mobile-menu-link link">Portfolio</a>
+          <a
+            href="./portfolio.html"
+            class="current-page-mobile mobile-menu-link link"
+            >Portfolio</a
+          >
         </li>
         <li classs="mobile-menu-item">
           <a href="" class="mobile-menu-link link">Contacts</a>
