--- a/index.html
+++ b/index.html
@@ -611,7 +611,7 @@
                 name="user_name"
                 class="modal-form-input modal-form-text"
                 required
-                pattern="^[a-zA-Z]{\s}*$"
+                pattern="^[A-Za-z ]+$"
                 minlength="2"
                 maxlength="30"
                 title="Type your name. Use letters of the Latin alphabet only. Up to 30 symbols"
